# novelai-gateway

./: .dockerignore  .env.example  .gitignore  API_REQUEST_DOC.md  Dockerfile  README.md  TIERED_PRICING.md  _make_test_img.py  _test_annotate.json  _test_gen_body.json  docker-compose.yml  fix_v2raya.sh  main.py  pyproject.toml  remote_container_check.py  remote_debug.py  remote_network_diag.py  start_v2raya.py
config/: models.toml.example
src/proxy/: app.py  config.py  forwarder.py  model_fetcher.py  model_registry.py  openai.py  rewriter.py  stats.py
src/proxy/templates/: lock.html
tests/: test_gateway.py
