[project]
name = "novelai-gateway"
version = "0.2.0"
description = "A transparent reverse proxy gateway for NovelAI with global concurrency queuing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx[socks]>=0.24.0",       # 让 httpx 自动安装对应的 SOCKS 依赖
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=25.1.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy"]
